# labeler

./: .gitignore  README.md
conversation/markdown/: STATE_PERSISTENCE.md  instructions.md
services/backend/: .gitignore  README.md  pyproject.toml  quickstart.sh
services/backend/src/data_labeler_api/: __init__.py  main.py
services/backend/src/data_labeler_api/api/: __init__.py  configuration.py  files.py  merchant_patterns.py  recommendations.py  rules.py  sessions.py
services/backend/src/data_labeler_api/core/: config.py  storage.py
services/backend/src/data_labeler_api/models/: __init__.py  configuration.py  file.py  label.py  merchant_patterns.py  recommendation.py  rule.py  session.py  transaction.py
services/backend/src/data_labeler_api/services/: __init__.py  csv_processor.py  merchant_patterns.py  rule_engine.py
services/backend/tests/: __init__.py  test_health.py
services/frontend/: package.json  sample_transactions.csv
services/frontend/.next/: trace
services/frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
services/frontend/src/app/: layout.tsx  page.tsx
services/frontend/src/components/: DataPreview.tsx  FileUpload.tsx  LabelManager.tsx  LabelingDataPreview.tsx  RuleManager.tsx  RulePreviewModal.tsx  SessionList.tsx  SmartRecommendations.tsx  SyncNotification.tsx  SyncStatusIndicator.tsx  ValidationReport.tsx
services/frontend/src/lib/: apiClient.ts  csvProcessor.ts  labelingUtils.ts  recommendationEngine.ts  ruleEngine.ts  ruleUtils.ts  statePersistence.ts  statePersistenceV2.ts
(+8 files in other folders)
